--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -62,7 +62,7 @@
             }
     
             .vuefinder-empty-list {
-                color: lighten($primary, 60);
+                color: lighten(mix($primary, $background), 10);
             }
     
             .vuefinder-sort-bar {
