add dnd functionality to selected items via alt click

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -51,7 +51,7 @@
     
             .vuefinder-modal-container,
             .vuefinder-file-content:hover .vuefinder-file-name span:first-child,
-            .vuefinder-context-menu li:hover {
+            .vuefinder-context-item:hover {
                 background-color: $background;
             }
     
