--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -14,6 +14,9 @@
                 background-color: $hover;
             }
         }
+        #{"/deep/"} .vuefinder-toolbar .vuefinder-button{
+            border: 1px solid transparent;
+        }
     
         #{"/deep/"} {
             .vuefinder-icon, 
