code refactoring, adjust navigation, view types, selection, sorting, drag&drop

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,3 +3,10 @@
 @tailwind components;
 
 @tailwind utilities;
+
+
+@layer components {
+  .vf-explorer-selected {
+    @apply bg-neutral-100 border border-neutral-300 !important;
+  }
+}
