--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,6 +7,10 @@
 
 @layer components {
   .vf-explorer-selected {
-    @apply bg-neutral-100 border border-neutral-300 !important;
+    @apply bg-neutral-100 border border-neutral-300 dark:bg-gray-700 dark:border-gray-900 dark:border-slate-800 !important;
+  }
+
+  .vf-explorer-selector {
+    @apply border border-slate-500 bg-slate-300 opacity-50 !important;
   }
 }
