--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,7 +7,7 @@
 
 @layer components {
   .vf-explorer-selected {
-    @apply bg-neutral-100 border border-neutral-300 dark:bg-gray-700 dark:border-gray-900 dark:border-slate-800 !important;
+    @apply bg-neutral-100 border border-neutral-300 dark:bg-slate-700 dark:border-gray-900 dark:border-slate-800 !important;
   }
 
   .vf-explorer-selector {
