--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,8 +1,9 @@
-/* @tailwind base; */
+@tailwind base;
 
 @tailwind components;
 
 @tailwind utilities;
+
 
 @layer components {
   .vf-explorer-selected {
