--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,39 +3,39 @@
 @tailwind utilities;
 
 @layer components {
-  .vuefinder .vf-explorer-selected {
+  .vf-explorer-selected {
     @apply bg-neutral-100 border border-neutral-300 dark:bg-slate-700 dark:border-gray-900 dark:border-slate-800 !important;
   }
 
-  .vuefinder .vf-explorer-selector {
+  .vf-explorer-selector {
     @apply border border-slate-500 bg-slate-300 opacity-50 !important;
   }
 
-  .vuefinder .vuefinder.dark {
+  .vuefinder.dark {
     color-scheme: dark;
   }
 
   /* width */
-  .vuefinder .vf-selector-area::-webkit-scrollbar {
+  .vf-selector-area::-webkit-scrollbar {
     width: 10px;
   }
 
   /* Track */
 
-  .vuefinder .vf-selector-area::-webkit-scrollbar-track-piece{
+  .vf-selector-area::-webkit-scrollbar-track-piece{
    @apply bg-gray-100 dark:bg-slate-900;
   }
   /* Handle */
-  .vuefinder .vf-selector-area::-webkit-scrollbar-thumb {
+  .vf-selector-area::-webkit-scrollbar-thumb {
    @apply bg-gray-200 dark:bg-slate-600;
   }
 
   /* Handle on hover */
-  .vuefinder .vf-selector-area::-webkit-scrollbar-thumb:hover {
+  .vf-selector-area::-webkit-scrollbar-thumb:hover {
     @apply bg-gray-300 dark:bg-slate-700;
   }
 
-  .vuefinder .vf-selector-area::-webkit-scrollbar-corner {
+  .vf-selector-area::-webkit-scrollbar-corner {
     @apply bg-transparent;
   }
 }
